// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Patient {
    id              Int     @id @default(autoincrement())
    firstName       String
    lastName        String
    appointments    Appointment[]
}

model Doctor {
    id              Int     @id @default(autoincrement())
    firstName       String
    lastName        String
    appointments    Appointment[]
    type            String
}

model Appointment {
    id          Int         @id @default(autoincrement())
    patient_id  Int
    doctor_id   Int
    start       DateTime
    end         DateTime
    patient     Patient     @relation(fields: [patient_id], references: [id])
    doctor      Doctor      @relation(fields: [doctor_id], references: [id])
}

