import Doctor from "./Doctor";

export default class CardiologistDoctor extends Doctor {

}
