import Doctor from "./Doctor";

export default class OncologistDoctor extends Doctor {

}
