import Doctor from "./Doctor";

export default class TherapistDoctor extends Doctor {

}
