@startuml

abstract class Doctor {
    + firstName: string
    + lastName: string
}

class CardiologistDoctor {
}

class OncologistDoctor {
}

class TherapistDoctor {
}

class UndefinedDoctor {
}

interface IDoctorFactory {
    + getDoctor (): Doctor
}

class CardiologistFactory {
    + getDoctor (): Doctor
}

class OncologistFactory {
    + getDoctor (): Doctor
}

class TherapistFactory {
    + getDoctor (): Doctor
}

class UndefinedDoctorFactory {
    + getDoctor (): UndefinedDoctor
}

class PluginFactory {
    + getDoctorFactory(): IDoctorFactory
}

PluginFactory ..> IDoctorFactory

IDoctorFactory <|-- CardiologistFactory
IDoctorFactory <|-- OncologistFactory
IDoctorFactory <|-- TherapistFactory
IDoctorFactory <|-- UndefinedDoctorFactory

IDoctorFactory ..> Doctor

Doctor <|-- CardiologistDoctor
Doctor <|-- OncologistDoctor
Doctor <|-- TherapistDoctor
Doctor <|-- UndefinedDoctor

@enduml
